tests/lean/collectDepsIssue.lean.expected.out
collectDepsIssue.lean:5:0: error: don't know how to synthesize placeholder
context:
α : Type
a : α
⊢ List α
